# lau-constitutive-compute

./: AGENT.md  Cargo.toml  README.md
src/: agent.rs  core.rs  crdt.rs  hodge.rs  kolmogorov.rs  lib.rs  main.rs  symplectic.rs  warp.rs
